--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,14 @@
 <ion-menu [content]="nav">
     <ion-header>
         <ion-toolbar>
-            <ion-title>Menu</ion-title>
+            <ion-title>Profile</ion-title>
         </ion-toolbar>
     </ion-header>
     <ion-content>
         <ion-list>
             <button ion-item (click)="onLoad(tabsPage)"> 
                 <ion-icon name="quote" item-left></ion-icon>
-                Quotes
+                Edit Profile
             </button>
             <button ion-item (click)="onLoad(settingsPage)">
                 <ion-icon name="settings" item-left></ion-icon>
